Fix compare non-contrasting-color

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -365,7 +365,7 @@ body {
         }
       }
 
-      tbody.links {
+      tbody.links td {
         height: $height_map;
         vertical-align: top;
 
